@@ -3,6 +3,7 @@ angels-titanium-concrete-brick=Titanium concrete brick
 angels-powder-zinc=Zinc powder
 angels-solid-sodium-tungstate=Sodium tungstate
 angels-powder-tungsten-carbide=Tungsten carbide powder mixture
+angels-powder-copper-tungsten=Copper tungsten powder mixture
 angels-solid-tungsten-trioxide=Tungsten trioxide
 block-construction-0=Construction block 0
 
