@@ -52,23 +52,17 @@ data:extend({
 })
 if mods["bobplates"] then
 data:extend({
-    -- Molten copper tungsten
+    -- Tungsten carbide powder mixture
   {
-    type = "fluid",
-    name = "angels-liquid-molten-copper-tungsten",
-    icons = {
-      {
-        icon = "__extendedangels__/graphics/icons/liquid-molten-copper-tungsten.png",
-        icon_size = 64,
-      },
-    },
-    default_temperature = 3422,
-    heat_capacity = "0kJ",
-    base_color = { r = 152 / 255, g = 74 / 255, b = 58 / 255 },
-    flow_color = { r = 152 / 255, g = 74 / 255, b = 58 / 255 },
-    max_temperature = 3422,
-    auto_barrel = false,
+    type = "item",
+    name = "angels-powder-copper-tungsten",
+    icon = "__extendedangels__/graphics/icons/powder-copper-tungsten.png",
+    icon_size = 64,
+    subgroup = "angels-tungsten-casting",
+    order = "a",
+    stack_size = 200,
   },
+
     -- Tungsten carbide powder mixture
   {
     type = "item",
